@@ -10,6 +10,8 @@ Version 0.7.0~dev
 	* Prevent spvd from quitting if no plugins are configured.
 	* Fixed wrong permission on log file, closes #2085.
 	* Fixed use of unitialized class member 'name', closes: #2986.
+	* Using new webengine-spv get_checks parameter :  get_detailed_infos.
+	* Retreive status_infos to let jobs access them.
 
 Version 0.6.2 Released on 2010/01/27
 
